--- a/options/test/002_xrestormer_denoise.yml
+++ b/options/test/002_xrestormer_denoise.yml
@@ -1,5 +1,5 @@
-name: A04_Net_L_Denoising_bs32p256
-model_type: RestormerModel
+name: 002_xrestormer_denoise
+model_type: XRestormerModel
 scale: 1
 num_gpu: 8
 manual_seed: 123
@@ -49,7 +49,7 @@ datasets:
       type: disk
 # network structures
 network_g:
-  type: Channel_HaloSpatialv22_OCAB
+  type: XRestormer
   inp_channels: 3
   out_channels: 3
   dim: 48
@@ -68,7 +68,7 @@ network_g:
 
 # path
 path:
-  pretrain_network_g: experiments/A04_Net_L_GaussianNoise_bs32p256/models/net_g_latest.pth
+  pretrain_network_g: experiments/pretrained/denoise_300k.pth
   strict_load_g: true
   resume_state: ~
 # validation settings
