--- a/options/test/005_xrestormer_dehaze.yml
+++ b/options/test/005_xrestormer_dehaze.yml
@@ -1,5 +1,5 @@
-name: A05_Net_L_Dehazing_bs32p256
-model_type: RestormerModel
+name: 005_xrestormer_dehaze
+model_type: XRestormerModel
 scale: 1
 num_gpu: 8
 manual_seed: 123
@@ -16,7 +16,7 @@ datasets:
       type: disk
 # network structures
 network_g:
-  type: Channel_HaloSpatialv22_OCAB
+  type: XRestormer
   inp_channels: 3
   out_channels: 3
   dim: 48
@@ -35,7 +35,7 @@ network_g:
 
 # path
 path:
-  pretrain_network_g: experiments/A05_Net_L_Haze_bs32p256/models/net_g_latest.pth
+  pretrain_network_g: experiments/pretrained/dehaze_300k.pth
   strict_load_g: true
   resume_state: ~
 # validation settings
