--- a/options/train/001_xrestormer_sr.yml
+++ b/options/train/001_xrestormer_sr.yml
@@ -1,6 +1,6 @@
 # general settings
 name: xrestormer_sr
-model_type: RestormerModel
+model_type: XRestormerModel
 scale: 4
 num_gpu: 8
 manual_seed: 123
@@ -55,7 +55,7 @@ datasets:
 
 # network structures
 network_g:
-  type: Channel_HaloSpatialv22_OCAB
+  type: XRestormer
   inp_channels: 3
   out_channels: 3
   dim: 48
