--- a/options/train/004_xrestormer_derain.yml
+++ b/options/train/004_xrestormer_derain.yml
@@ -48,7 +48,7 @@ datasets:
 
 # network structures
 network_g:
-  type: Channel_HaloSpatialv22_OCAB
+  type: XRestormer
   inp_channels: 3
   out_channels: 3
   dim: 48
@@ -67,7 +67,7 @@ network_g:
 
 # path
 path:
-  pretrain_network_g: experiments/095_HaloNetv20_correct_Deraining_bs32ps256/models/net_g_35000.pth
+  pretrain_network_g: ~
   strict_load_g: false
   resume_state: ~
 
