--- a/options/train/005_xrestormer_dehaze.yml
+++ b/options/train/005_xrestormer_dehaze.yml
@@ -42,7 +42,7 @@ datasets:
 
 # network structures
 network_g:
-  type: Channel_HaloSpatialv22_OCAB
+  type: XRestormer
   inp_channels: 3
   out_channels: 3
   dim: 48
@@ -61,7 +61,7 @@ network_g:
 
 # path
 path:
-  pretrain_network_g: experiments/091_HaloNetv20_Deblur_bs32ps256/models/net_g_140000.pth
+  pretrain_network_g: ~
   strict_load_g: false
   resume_state: ~
 
