--- a/options/train/001_xrestormer_sr.yml
+++ b/options/train/001_xrestormer_sr.yml
@@ -74,7 +74,7 @@ network_g:
 
 # path
 path:
-  pretrain_network_g: experiments/052_HaloNetv2_L_SR_bs16/models/net_g_160000.pth
+  pretrain_network_g: ~ #experiments/052_HaloNetv2_L_SR_bs16/models/net_g_160000.pth
   strict_load_g: false
   resume_state: ~
 
